@@ -5,10 +5,13 @@
 Unreleased
 ==========
 
+ - Fix: having the same named parameter multiple times in a prepared SQL
+   statement caused incorrect parameter substitution with bound values
+
 2016/07/01 0.5.1
 ================
 
- - Fixed an issue that occur if parameters are passed in a different order 
+ - Fixed an issue that occur if parameters are passed in a different order
    than specified in the sql statement.
 
 2016/06/20 0.5.0
